<resources>
  <string name="app_name">Stock Hawk</string>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint">FB</string>
  <string name="input_prefill"></string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="tab_1_week" translatable="false">1W</string>
  <string name="tab_1_month" translatable="false">1M</string>
  <string name="tab_3_months" translatable="false">3M</string>
  <string name="tab_6_months" translatable="false">6M</string>
  <string name="tab_1_year" translatable="false">YEAR</string>
  <string name="desc_tab_1_week" translatable="false">1 Week</string>
  <string name="desc_tab_1_month" translatable="false">1 Month</string>
  <string name="desc_tab_3_months" translatable="false">3 Month</string>
  <string name="desc_tab_6_months" translatable="false">6 Month</string>
  <string name="desc_tab_1_year" translatable="false">YEAR</string>
  <string name="desc_button_add_stock">add new stock</string>
  <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
  <string name="desc_graph">Stock Price</string>
  <string name="stock_exist">Stock is already saved</string>
  <string name="tv_stock_history">tap on graph</string>
  <string name="widget_title" translatable="false">Stock Hawk</string>
</resources>
