<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:foregroundGravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/color_primary"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/card_view_elevation"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="7">
            <TextView
                android:id="@+id/tv_bid_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_stock_price"
                android:gravity="center_horizontal"
                android:textColor="@color/color_primary"
                />
            <TextView
                android:id="@+id/tv_bid_price_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_stock_history"
                android:textColor="@color/color_primary"
                />
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/stock_line_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4.5"
                android:minHeight="260dp"
                />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabbar_time_span"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabSelectedTextColor="@android:color/black"
                app:tabIndicatorColor="@android:color/black"
                app:tabTextColor="@color/color_primary"
                >
                <android.support.design.widget.TabItem
                    android:id="@+id/tab_1_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_1_month"
                    android:contentDescription="@string/desc_tab_1_month"
                    />
                <android.support.design.widget.TabItem
                    android:id="@+id/tab_3_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_3_months"
                    android:contentDescription="@string/desc_tab_3_months"
                    />
                <android.support.design.widget.TabItem
                    android:id="@+id/tab_6_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_6_months"
                    android:contentDescription="@string/desc_tab_6_months"
                    />
                <android.support.design.widget.TabItem
                    android:id="@+id/tab_1_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_1_year"
                    android:contentDescription="@string/desc_tab_1_year"
                    />
            </android.support.design.widget.TabLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>